# srun-cli-client

./: Cargo.toml  LICENSE  README.MD
.github/workflows/: release.yml
src/: cli.rs  config.rs  main.rs  srun.rs
src/srun/: client.rs  error.rs  response.rs  srbx1.rs
