[package]
name = "srun-cli"
version = "0.1.1"
edition = "2021"

[features]
reqwest-tls = ["reqwest/native-tls-vendored"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.21.5", default-features = false }
clap = { version = "4.4.8", default-features = false, features = ["std", "help"] }
hmac = "0.12.1"
json = "0.12.4"
local-ip-address = "0.5.6"
md-5 = { version = "0.10.6", default-features = false }
regex = { version = "1.10.2", default-features = false, features = ["unicode-perl"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking"] }
sha1 = { version = "0.10.6", default-features = false }
